Add label for showing grid size

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
     <div class="grid">
-        
+    </div>
+    <div class="grid-size-slider">
+        <input name='slider' type="range" min="2" max="64" value="10" list="tickmarks">
+        <label for="slider"></label>
     </div>
 </body>
 </html>
