Add clear button

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <div class="grid"> 
     </div>
     <div class="grid-size-slider">
-        <input name='slider' type="range" min="2" max="64" value="10" list="tickmarks">
+        <input name='slider' type="range" min="2" max="100" value="10" list="tickmarks">
         <label for="slider"></label>
+    </div>
+    <div class="clear">
+        <button>Clear</button>
     </div>
 </body>
 </html>
