Add eraser button

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <div class="clear">
         <button>Clear</button>
     </div>
+    <div class="eraser">
+        <button>Eraser</button>
+    </div>
 </body>
 </html>
