Add rainbow mode

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
     <div class="eraser">
         <button>Eraser</button>
     </div>
+    <div class="rainbow-mode">
+        <button>Rainbow Mode</button>
+    </div>
 </body>
 </html>
