Fix bug that occasionally didn't allow drawing

--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
     <div class="rainbow-mode">
         <button>Rainbow Mode</button>
     </div>
+    <div class="color-picker">
+        <input type="color" value="#000000">
+    </div>
 </body>
 </html>
