Create RGB hex to dec function

--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
     <div class="color-picker">
         <input type="color" value="#000000">
     </div>
+    <div class="shading-mode">
+        <button>Shading Mode</button>
+    </div>
 </body>
 </html>
