--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" type="image/x-icon" sizes='any' href="./images/favicon-32x32.png?">
+    <link rel="icon" type="image/x-icon" sizes='any' href="./images/favicon-32x32.png">
     <script src="./script.js" defer></script>
     <title>Etch-a-Sketch</title>
 </head>
